feat(virtual-topic): CEL filter on JSON record
